# adversarial-research

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
agents/: adversary.md  arbiter.md  architect.md  coder.md  conductor.md  deep-thinker.md  experimenter.md  judge.md  refutor.md  researcher.md  reviewer.md  scout.md  synthesizer.md  thinker.md
config/: README.md  orchestration.yaml  protocol.md
docs/: CONTRACT.md
docs/specs/: 2026-04-02-principia-v03-design.md  2026-04-05-plugin-bundle-migration-design.md  2026-04-16-claude-plugin-adapter-architecture-design.md
harnesses/claude/: README.md
harnesses/codex/: README.md
hooks/: hooks.json
plugins/claude/: README.md
plugins/codex/: README.md
principia/: __init__.py
principia/agents/: adversary.md  arbiter.md  conductor.md  scout.md  synthesizer.md
principia/api/: __init__.py  engine.py  types.py
principia/cli/: __init__.py  codex_runner.py  manage.py
principia/config/: orchestration.yaml
principia/core/: __init__.py  commands.py  config.py  db.py  explorer.py  ids.py  orchestration.py  reports.py  validation.py
scripts/: __init__.py  commands.py  config.py  db.py  frontmatter.py  ids.py  manage.py  orchestration.py  reports.py  validation.py
skills/cascade/: SKILL.md
skills/design/: SKILL.md
skills/falsify/: SKILL.md
tests/: conftest.py  test_ci_contract.py  test_commands.py  test_contract.py  test_database.py  test_db_v2.py  test_discovery_commands.py  test_explorer.py  test_frontmatter.py  test_id_derivation.py  test_orchestration.py  test_security.py  test_serializer.py  test_workflow_contract.py  test_yaml_parser.py
(+84 files in other folders)
