[project]
name = "adversarial-research"
version = "0.1.0"
requires-python = ">=3.10"
description = "Evidence-based adversarial research methodology with hypothesis tracking"

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.9", "mypy>=1.14", "pre-commit>=4.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["scripts"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
disallow_untyped_defs = false
